--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -19,11 +19,15 @@ apply plugin: 'io.github.fourlastor.construo'
 import io.github.fourlastor.construo.Target
 
 sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
-mainClassName = 'tekup.mario.gui.shaheenjawadi.lwjgl3.Lwjgl3Launcher'
-application.setMainClass(mainClassName)
+application {
+  mainClass = 'tekup.mario.gui.shaheenjawadi.lwjgl3.Lwjgl3Launcher'
+}
+
 eclipse.project.name = appName + '-lwjgl3'
-java.sourceCompatibility = 8
-java.targetCompatibility = 8
+java {
+  sourceCompatibility = JavaVersion.VERSION_1_8
+  targetCompatibility = JavaVersion.VERSION_1_8
+}
 if (JavaVersion.current().isJava9Compatible()) {
         compileJava.options.release.set(8)
 }
@@ -62,7 +66,7 @@ jar {
   }
 // setting the manifest makes the JAR runnable.
   manifest {
-    attributes 'Main-Class': project.mainClassName
+    attributes 'Main-Class': application.mainClass
   }
 // this last step may help on some OSes that need extra instruction to make runnable JARs.
   doLast {
